docker/envoy/envoy.yaml
node:
  id: envoy-node
  cluster: envoy-cluster
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                http_filters:
                  - name: envoy.filters.http.oauth2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
                      config:
                        token_endpoint:
                          cluster: keycloak
                          uri: "http://localhost:8081/realms/pricing/protocol/openid-connect/token"
                          timeout: 3s
                        authorization_endpoint: "http://localhost:8081/realms/pricing/protocol/openid-connect/auth"
                        redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/login/oauth2/code/keycloak"
                        redirect_path_matcher:
                          path:
                            exact: /login/oauth2/code/keycloak
                        signout_path:
                          path:
                            exact: /signout
                        credentials:
                          client_id: envoy-client
                          token_secret:
                            name: token
                            sds_config:
                              path: "/etc/envoy/token-secret.yaml"
                          hmac_secret:
                            name: hmac
                            sds_config:
                              path: "/etc/envoy/hmac.yaml"
                        forward_bearer_token: true
                        # (Optional): defaults to 'user' scope if not provided
                        auth_scopes:
                          - openid
                          - profile
                        # (Optional): set resource parameter for Authorization request
                  - name: envoy.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                tracing: { }
                codec_type: "AUTO"
                stat_prefix: ingress_http
                route_config:
                  virtual_hosts:
                    - name: service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/api/products/"
                          route:
                            cluster: service_product_admin
                            timeout: 5s
                        - match:
                            prefix: "/api/categories/"
                          route:
                            cluster: service_product_admin
                            timeout: 5s
                        - match:
                            prefix: "/api/products-analytics/"
                          route:
                            cluster: service_product_analytics
                            timeout: 5s
                        - match:
                            prefix: "/api/quotations/"
                          route:
                            cluster: service_quotation_agent
                            timeout: 5s
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_frontend
                            timeout: 5s
                          typed_per_filter_config:
                            envoy.filters.http.oauth2:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2Config
                              disabled: true
  clusters:
    - name: keycloak
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
    - name: service_frontend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      load_assignment:
        cluster_name: service_frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 3000
    - name: service_product_admin
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      load_assignment:
        cluster_name: service_product_admin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8083
    - name: service_product_analytics
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      load_assignment:
        cluster_name: service_product_analytics
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8084
    - name: service_quotation_agent
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      connect_timeout: 1s
      load_assignment:
        cluster_name: service_quotation_agent
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 8085
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
